feat: unfavorite a word
